# project-cowboy-wizard

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/graphics/: window.h
src/graphics/private/: window.cpp
src/private/: main.cpp
src/private/audio/: manager.cpp  source.cpp
src/private/core/: engine.cpp
src/private/game/: background.cpp  character.cpp
src/private/graphics/: animationrenderer.cpp  renderer.cpp  spriterenderer.cpp  texture.cpp  textureatlas.cpp  window.cpp
src/private/input/: manager.cpp
src/private/resources/: font.cpp  manager.cpp  resource.cpp  shader.cpp  sound.cpp  sprite.cpp
src/private/tools/: context.cpp  entityinspector.cpp  sceneinspector.cpp
src/private/world/: scene.cpp
src/public/audio/: manager.h  source.h
src/public/core/: engine.h
src/public/game/: background.h  character.h
src/public/graphics/: animationrenderer.h  primitives.h  renderer.h  spriterenderer.h  texture.h  textureatlas.h  window.h
src/public/input/: manager.h
src/public/resources/: font.h  manager.h  resource.h  shader.h  sound.h  sprite.h
src/public/tools/: context.h  entityinspector.h  sceneinspector.h  window.h
src/public/world/: scene.h  transform.h
